<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MathStatsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMath5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:text="@string/Math5" />

            <TextView
                android:id="@+id/editTextPerCentMath5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:ems="5"
                android:text="50%" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:ems="10"
                android:text="@string/hadSameMark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMath4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:text="@string/Math4" />

            <TextView
                android:id="@+id/editTextPerCentMath4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:ems="5"
                android:text="50%" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:ems="10"
                android:text="@string/hadSameMark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMath3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:text="@string/Math3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:ems="5"
                android:text="50%" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:ems="10"
                android:text="@string/hadSameMark" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMath2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:text="@string/Math2" />

            <TextView
                android:id="@+id/editTextPerCentMath2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:ems="5"
                android:text="50%" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:ems="10"
                android:text="@string/hadSameMark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewMath1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:text="@string/Math1" />

            <TextView
                android:id="@+id/editTextPerCentMath1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:ems="5"
                android:text="50%" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:ems="10"
                android:text="@string/hadSameMark" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>