<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoryStatsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewHis5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:text="@string/history5" />

            <TextView
                android:id="@+id/editTextPerCentHis5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:ems="5"
                android:text="50%" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:ems="10"
                android:text="@string/hadSameMark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewHis4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:text="@string/history4" />

            <TextView
                android:id="@+id/editTextPerCentHis4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:ems="5"
                android:text="50%" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:ems="10"
                android:text="@string/hadSameMark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewHis3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:text="@string/history3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:ems="5"
                android:text="50%" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:ems="10"
                android:text="@string/hadSameMark" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewHis2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:text="@string/history2" />

            <TextView
                android:id="@+id/editTextPerCentHis2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:ems="5"
                android:text="50%" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:ems="10"
                android:text="@string/hadSameMark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewHis1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:text="@string/history1" />

            <TextView
                android:id="@+id/editTextPerCentHis1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:ems="5"
                android:text="50%" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10px"
                android:ems="10"
                android:text="@string/hadSameMark" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>